updated version of lab 3

--- a/notebooks/lab_3.ipynb
+++ b/notebooks/lab_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "2f53d5cc-5544-40c5-a657-ca64955da867",
    "metadata": {
     "tags": []
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "cbc17695-158c-42a6-a962-c713875e0fd7",
    "metadata": {
     "tags": []
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "25198952-de63-45a0-9535-6966af28dd7f",
    "metadata": {
     "tags": []
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "140b180f-2b0e-46bc-be20-64810a86320d",
    "metadata": {
     "tags": []
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "82e96265-35f6-477d-bbb9-d5b577bf8d35",
    "metadata": {
     "tags": []
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "899e26ad-c370-464c-b9ae-61a2151fc43a",
    "metadata": {
     "tags": []
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "98ef2844-2543-45d7-8c52-a87ba7bae494",
    "metadata": {
     "tags": []
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "7f1349cf-c38f-48b7-b421-3da46d05a71f",
    "metadata": {
     "tags": []
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "54122eb7-a302-4c34-86e7-aacdf8fcce2f",
    "metadata": {
     "tags": []
@@ -178,6 +178,72 @@
    "source": [
     "root = ET.fromstring(xmlstring)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e05e355f-0bf3-453d-b8fe-49fb29e97118",
+   "metadata": {},
+   "source": [
+    "4. Write an expression that selects the 3rd fruit in the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a24c2d59-4d9a-44e8-b477-1ac88cd875b8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "xmlstring = \"\"\"<?xml version=\"1.0\"?><fruits>\n",
+    "  <fruit>Apple</fruit>\n",
+    "  <fruit>Banana</fruit>\n",
+    "  <fruit>Orange</fruit>\n",
+    "  <fruit>Strawberry</fruit>\n",
+    "</fruits>\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31d8e6c8-0162-4ced-a5d6-cb5e1945bbf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "02f76dcf-65a1-4f9f-867c-569ea0a2e0c9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "xmlstring = \"\"\"<?xml version=\"1.0\"?>\n",
+    "<animals>\n",
+    "  <mammal>\n",
+    "    <name>Lion</name>\n",
+    "  </mammal>\n",
+    "  <reptile>\n",
+    "    <name>Snake</name>\n",
+    "  </reptile>\n",
+    "  <bird>\n",
+    "    <name>Eagle</name>\n",
+    "  </bird>\n",
+    "</animals>\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5418d70b-4b29-4112-919f-a8976b7dcc6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
