--- a/notebooks/lab_3.ipynb
+++ b/notebooks/lab_3.ipynb
@@ -205,13 +205,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31d8e6c8-0162-4ced-a5d6-cb5e1945bbf1",
+   "cell_type": "markdown",
+   "id": "12f87118-2ded-467b-9827-df8bd0488606",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "5."
+    "5. 5. Write code with an XPath expression to return a list of all animals, regardless of their type (mammal, reptile, bird)."
    ]
   },
   {
