--- a/notebooks/lab_3.ipynb
+++ b/notebooks/lab_3.ipynb
@@ -14,10 +14,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a4a8d236-a11b-4127-9801-834e74cd1f7a",
+   "metadata": {},
+   "source": [
+    "## XPath problems\n",
+    "Write Code with Xpath expressions to solve the following problems."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0d4c4dd1-92d6-4c2d-8688-ca8d0e7c9011",
    "metadata": {},
    "source": [
-    "1. Write code with XPath expression to print all book titles in the XML."
+    "1. Print all book titles in the XML."
    ]
   },
   {
@@ -59,7 +68,7 @@
    "id": "aa1c4fef-bf80-4645-83cd-eb8f21d6c6b3",
    "metadata": {},
    "source": [
-    "2. Write code with XPath expression to print all the names of students that are 20 years old."
+    "2. Print all the names of students that are 20 years old."
    ]
   },
   {
@@ -127,7 +136,7 @@
    "id": "79f32642-0bc6-4da6-a33c-b57c312ff4d1",
    "metadata": {},
    "source": [
-    "3. Write code with an XPath expression to print the books titles of books with the folloing cahracteristics: <br>\n",
+    "3. Print the books titles of books with the folloing cahracteristics: <br>\n",
     "(a) With price 19.95 <br>\n",
     "(b) With price < 20$ <br>\n",
     "(c) Author's first name is Jane <br>"
@@ -184,7 +193,7 @@
    "id": "e05e355f-0bf3-453d-b8fe-49fb29e97118",
    "metadata": {},
    "source": [
-    "4. Write an expression that selects the 3rd fruit in the list"
+    "4. Print the name of the 3rd fruit in the list"
    ]
   },
   {
@@ -209,7 +218,7 @@
    "id": "12f87118-2ded-467b-9827-df8bd0488606",
    "metadata": {},
    "source": [
-    "5. 5. Write code with an XPath expression to return a list of all animals, regardless of their type (mammal, reptile, bird)."
+    "5. Create a list of all animals, regardless of their type (mammal, reptile, bird)."
    ]
   },
   {
