--- a/notebooks/lecture_4_excel.ipynb
+++ b/notebooks/lecture_4_excel.ipynb
@@ -13,8 +13,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#! mv ~/Downloads/Sample\\ -\\ Superstore.xls ~/data\n",
+    "! mv ~/data/Sample\\ -\\ Superstore.xls ~/data/SampleSuperstore.xls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/yinterian/data'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "data = os.path.expanduser(\"~/data\")\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -25,7 +63,7 @@
     }
    ],
    "source": [
-    "with open('SampleSuperstore.xls', \"rb\") as f:\n",
+    "with open(data + '/SampleSuperstore.xls', \"rb\") as f:\n",
     "    txt = f.read()\n",
     "    print(txt[0:100])"
    ]
@@ -41,8 +79,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "! pip install -q -U csvkit"
@@ -57,25 +97,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "! in2csv SampleSuperstore.xls > SampleSuperstore.csv"
+    "! in2csv ~/data/SampleSuperstore.xls > SampleSuperstore.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Row ID,Order ID,Order Date,Ship Date,Ship Mode,Customer ID,Customer Name,Segment,Country,City,State,Postal Code,Region,Product ID,Category,Sub-Category,Product Name,Sales,Quantity,Discount,Profit\r\n",
-      "1.0,CA-2016-152156,2016-11-08,2016-11-11,Second Class,CG-12520,Claire Gute,Consumer,United States,Henderson,Kentucky,42420.0,South,FUR-BO-10001798,Furniture,Bookcases,Bush Somerset Collection Bookcase,261.96,2.0,0.0,41.9136\r\n",
-      "2.0,CA-2016-152156,2016-11-08,2016-11-11,Second Class,CG-12520,Claire Gute,Consumer,United States,Henderson,Kentucky,42420.0,South,FUR-CH-10000454,Furniture,Chairs,\"Hon Deluxe Fabric Upholstered Stacking Chairs, Rounded Back\",731.9399999999999,3.0,0.0,219.58199999999997\r\n"
+      "Row ID,Order ID,Order Date,Ship Date,Ship Mode,Customer ID,Customer Name,Segment,Country,City,State,Postal Code,Region,Product ID,Category,Sub-Category,Product Name,Sales,Quantity,Discount,Profit\n",
+      "1.0,CA-2016-152156,2016-11-08,2016-11-11,Second Class,CG-12520,Claire Gute,Consumer,United States,Henderson,Kentucky,42420.0,South,FUR-BO-10001798,Furniture,Bookcases,Bush Somerset Collection Bookcase,261.96,2.0,0.0,41.9136\n",
+      "2.0,CA-2016-152156,2016-11-08,2016-11-11,Second Class,CG-12520,Claire Gute,Consumer,United States,Henderson,Kentucky,42420.0,South,FUR-CH-10000454,Furniture,Chairs,\"Hon Deluxe Fabric Upholstered Stacking Chairs, Rounded Back\",731.9399999999999,3.0,0.0,219.58199999999997\n"
      ]
     }
    ],
@@ -101,8 +145,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -227,23 +273,23 @@
        "</div>"
       ],
       "text/plain": [
-       "   Row ID        Order ID Order Date  Ship Date     Ship Mode Customer ID   \n",
-       "0       1  CA-2016-152156 2016-11-08 2016-11-11  Second Class    CG-12520  \\\n",
+       "   Row ID        Order ID Order Date  Ship Date     Ship Mode Customer ID  \\\n",
+       "0       1  CA-2016-152156 2016-11-08 2016-11-11  Second Class    CG-12520   \n",
        "1       2  CA-2016-152156 2016-11-08 2016-11-11  Second Class    CG-12520   \n",
        "2       3  CA-2016-138688 2016-06-12 2016-06-16  Second Class    DV-13045   \n",
        "\n",
-       "     Customer Name    Segment        Country         City  ... Postal Code   \n",
-       "0      Claire Gute   Consumer  United States    Henderson  ...       42420  \\\n",
+       "     Customer Name    Segment        Country         City  ... Postal Code  \\\n",
+       "0      Claire Gute   Consumer  United States    Henderson  ...       42420   \n",
        "1      Claire Gute   Consumer  United States    Henderson  ...       42420   \n",
        "2  Darrin Van Huff  Corporate  United States  Los Angeles  ...       90036   \n",
        "\n",
-       "   Region       Product ID         Category Sub-Category   \n",
-       "0   South  FUR-BO-10001798        Furniture    Bookcases  \\\n",
+       "   Region       Product ID         Category Sub-Category  \\\n",
+       "0   South  FUR-BO-10001798        Furniture    Bookcases   \n",
        "1   South  FUR-CH-10000454        Furniture       Chairs   \n",
        "2    West  OFF-LA-10000240  Office Supplies       Labels   \n",
        "\n",
-       "                                        Product Name   Sales  Quantity   \n",
-       "0                  Bush Somerset Collection Bookcase  261.96         2  \\\n",
+       "                                        Product Name   Sales  Quantity  \\\n",
+       "0                  Bush Somerset Collection Bookcase  261.96         2   \n",
        "1  Hon Deluxe Fabric Upholstered Stacking Chairs,...  731.94         3   \n",
        "2  Self-Adhesive Address Labels for Typewriters b...   14.62         2   \n",
        "\n",
@@ -255,14 +301,14 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "table = pd.read_excel(\"SampleSuperstore.xls\") # XLS NOT CSV!\n",
+    "table = pd.read_excel(\"~/data/SampleSuperstore.xls\") # XLS NOT CSV!\n",
     "table.head(3)"
    ]
   },
@@ -291,8 +337,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -325,8 +373,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -346,7 +396,7 @@
        "        '72.94799999999998']], dtype='<U127')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,8 +419,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -495,23 +547,23 @@
        "</div>"
       ],
       "text/plain": [
-       "   Row ID        Order ID  Order Date   Ship Date     Ship Mode Customer ID   \n",
-       "0     1.0  CA-2016-152156  2016-11-08  2016-11-11  Second Class    CG-12520  \\\n",
+       "   Row ID        Order ID  Order Date   Ship Date     Ship Mode Customer ID  \\\n",
+       "0     1.0  CA-2016-152156  2016-11-08  2016-11-11  Second Class    CG-12520   \n",
        "1     2.0  CA-2016-152156  2016-11-08  2016-11-11  Second Class    CG-12520   \n",
        "2     3.0  CA-2016-138688  2016-06-12  2016-06-16  Second Class    DV-13045   \n",
        "\n",
-       "     Customer Name    Segment        Country         City  ... Postal Code   \n",
-       "0      Claire Gute   Consumer  United States    Henderson  ...     42420.0  \\\n",
+       "     Customer Name    Segment        Country         City  ... Postal Code  \\\n",
+       "0      Claire Gute   Consumer  United States    Henderson  ...     42420.0   \n",
        "1      Claire Gute   Consumer  United States    Henderson  ...     42420.0   \n",
        "2  Darrin Van Huff  Corporate  United States  Los Angeles  ...     90036.0   \n",
        "\n",
-       "   Region       Product ID         Category Sub-Category   \n",
-       "0   South  FUR-BO-10001798        Furniture    Bookcases  \\\n",
+       "   Region       Product ID         Category Sub-Category  \\\n",
+       "0   South  FUR-BO-10001798        Furniture    Bookcases   \n",
        "1   South  FUR-CH-10000454        Furniture       Chairs   \n",
        "2    West  OFF-LA-10000240  Office Supplies       Labels   \n",
        "\n",
-       "                                        Product Name   Sales  Quantity   \n",
-       "0                  Bush Somerset Collection Bookcase  261.96       2.0  \\\n",
+       "                                        Product Name   Sales  Quantity  \\\n",
+       "0                  Bush Somerset Collection Bookcase  261.96       2.0   \n",
        "1  Hon Deluxe Fabric Upholstered Stacking Chairs,...  731.94       3.0   \n",
        "2  Self-Adhesive Address Labels for Typewriters b...   14.62       2.0   \n",
        "\n",
@@ -523,7 +575,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,9 +595,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -559,7 +612,7 @@
        "Name: Customer Name, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,8 +623,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -584,7 +639,7 @@
        "Name: Profit, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.4"
   },
   "toc": {
    "colors": {
