--- a/notebooks/lecture_4_xml_xpath.ipynb
+++ b/notebooks/lecture_4_xml_xpath.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "id": "b1dcab0a",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import xml.etree.ElementTree as ET"
+    "from lxml import etree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 112,
    "id": "221fca4b",
    "metadata": {
     "tags": []
@@ -48,21 +48,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dfe6f04e-6bfe-49a9-95ac-9dba624517c5",
+   "metadata": {},
+   "source": [
+    "### Parsing "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 113,
    "id": "7a28f7aa",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# ET.parse('country_data.xml') from file\n",
-    "root = ET.fromstring(xmlstring)"
+    "# etree.parse('country_data.xml') from file\n",
+    "root = etree.fromstring(xmlstring)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 114,
    "id": "e7a12a3a",
    "metadata": {
     "tags": []
@@ -74,7 +82,7 @@
        "('data', {})"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 115,
    "id": "7baf29d7",
    "metadata": {
     "tags": []
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 116,
    "id": "e38a81e9",
    "metadata": {
     "tags": []
@@ -120,7 +128,7 @@
        "{'name': 'Singapore'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 117,
    "id": "06fe3d40",
    "metadata": {
     "tags": []
@@ -144,7 +152,7 @@
        "('rank', '4')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 118,
    "id": "74f7a425",
    "metadata": {
     "tags": []
@@ -164,10 +172,10 @@
     {
      "data": {
       "text/plain": [
-       "<Element 'country' at 0x104b40d10>"
+       "<Element country at 0x1057a1b40>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 119,
    "id": "73b45810",
    "metadata": {
     "tags": []
@@ -188,12 +196,12 @@
     {
      "data": {
       "text/plain": [
-       "[<Element 'country' at 0x104b40d10>,\n",
-       " <Element 'country' at 0x104b41260>,\n",
-       " <Element 'country' at 0x104b413f0>]"
+       "[<Element country at 0x1057a1b40>,\n",
+       " <Element country at 0x104aed140>,\n",
+       " <Element country at 0x1058777c0>]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,8 +220,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eba5175d-a929-4096-ac17-d99e8a6a9ddb",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "There are two usedfull functions depending on how you parse the xml."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 82,
+   "id": "a6719ada-bf25-40b6-9666-d6e5d45502df",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "root = etree.fromstring(xmlstring)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "id": "56be44b3",
    "metadata": {
     "tags": []
@@ -222,10 +252,10 @@
     {
      "data": {
       "text/plain": [
-       "[<Element 'data' at 0x104b40cc0>]"
+       "[<Element data at 0x105877bc0>]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +268,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 84,
+   "id": "0bb62f46-21cb-436d-9299-3fddf07b3c68",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Element data at 0x105877bc0>]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root.xpath(\".\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "388a071e-1b5d-4040-8f7e-f48bc2f04483",
+   "metadata": {},
+   "source": [
+    "Boths are very useful and xpath is more powefull. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "id": "eed02b8d",
    "metadata": {
     "tags": []
@@ -247,14 +308,14 @@
     {
      "data": {
       "text/plain": [
-       "[<Element 'neighbor' at 0x104b411c0>,\n",
-       " <Element 'neighbor' at 0x104b41210>,\n",
-       " <Element 'neighbor' at 0x104b413a0>,\n",
-       " <Element 'neighbor' at 0x104b41530>,\n",
-       " <Element 'neighbor' at 0x104b41580>]"
+       "[<Element neighbor at 0x1057cc700>,\n",
+       " <Element neighbor at 0x105870300>,\n",
+       " <Element neighbor at 0x105870440>,\n",
+       " <Element neighbor at 0x105870880>,\n",
+       " <Element neighbor at 0x105870800>]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,12 +323,12 @@
    "source": [
     "# All neighbor grand-children of 'country' of the top-level elements\n",
     "# matches country tag and then neighbor tag\n",
-    "root.findall(\"./country/neighbor\")"
+    "root.xpath(\"./country/neighbor\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 86,
    "id": "90177c8a",
    "metadata": {
     "tags": []
@@ -286,13 +347,13 @@
     }
    ],
    "source": [
-    "for neigh in root.findall(\"./country/neighbor\"):\n",
+    "for neigh in root.xpath(\"./country/neighbor\"):\n",
     "    print(neigh.attrib)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 87,
    "id": "08b53962",
    "metadata": {
     "tags": []
@@ -312,13 +373,13 @@
    ],
    "source": [
     "# similar result * matches everything\n",
-    "for neigh in root.findall(\"./*/neighbor\"):\n",
+    "for neigh in root.xpath(\"./*/neighbor\"):\n",
     "    print(neigh.attrib)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 88,
    "id": "1a5a06fd",
    "metadata": {
     "tags": []
@@ -339,13 +400,13 @@
    "source": [
     "# matches neighbor anywhere\n",
     "# // matches anywhere\n",
-    "for neigh in root.findall(\".//neighbor\"):\n",
+    "for neigh in root.xpath(\".//neighbor\"):\n",
     "    print(neigh.attrib)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 89,
    "id": "fa28db71",
    "metadata": {
     "tags": []
@@ -362,7 +423,7 @@
     }
    ],
    "source": [
-    "for el in root.findall(\".//year\"):\n",
+    "for el in root.xpath(\".//year\"):\n",
     "    print(el.text)"
    ]
   },
@@ -376,9 +437,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 90,
    "id": "954eb18f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "xmlstring = \"\"\"<?xml version=\"1.0\"?>\n",
@@ -397,19 +460,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 91,
    "id": "c7d85ef8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "root = ET.fromstring(xmlstring)"
+    "root = etree.fromstring(xmlstring)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 93,
    "id": "2decc20f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -421,15 +488,17 @@
     }
    ],
    "source": [
-    "for neigh in root.findall(\"./country/neighbor\"):\n",
+    "for neigh in root.xpath(\"./country/neighbor\"):\n",
     "    print(neigh.attrib)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 94,
    "id": "f6e50605",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -441,15 +510,17 @@
     }
    ],
    "source": [
-    "for neigh in root.findall(\"./*/neighbor\"):\n",
+    "for neigh in root.xpath(\"./*/neighbor\"):\n",
     "    print(neigh.attrib)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 95,
    "id": "54ed901b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -462,7 +533,7 @@
     }
    ],
    "source": [
-    "for neigh in root.findall(\".//neighbor\"):\n",
+    "for neigh in root.xpath(\".//neighbor\"):\n",
     "    print(neigh.attrib)"
    ]
   },
@@ -476,62 +547,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "c6781e16",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<?xml version=\"1.0\"?>\n",
-      "<data>\n",
-      "    <country name=\"Liechtenstein\">\n",
-      "        <rank>1</rank>\n",
-      "        <year>2008</year>\n",
-      "        <gdppc>141100</gdppc>\n",
-      "        <neighbor name=\"Austria\" direction=\"E\"/>\n",
-      "        <neighbor name=\"Switzerland\" direction=\"W\"/>\n",
-      "    </country>\n",
-      "    <country name=\"Singapore\">\n",
-      "        <rank>4</rank>\n",
-      "        <year>2011</year>\n",
-      "        <gdppc>59900</gdppc>\n",
-      "        <neighbor name=\"Malaysia\" direction=\"N\"/>\n",
-      "    </country>\n",
-      "    <country name=\"Panama\">\n",
-      "        <rank>68</rank>\n",
-      "        <year>2011</year>\n",
-      "        <gdppc>13600</gdppc>\n",
-      "        <neighbor name=\"Costa Rica\" direction=\"W\"/>\n",
-      "        <neighbor name=\"Colombia\" direction=\"E\"/>\n",
-      "    </country>\n",
-      "</data>\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(xmlstring)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 99,
    "id": "daefe60c",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "neig = root.find(\".//neighbor[@name='Austria']\")"
+    "neigs = root.xpath(\".//neighbor[@name='Austria']\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 105,
    "id": "ac319558",
    "metadata": {
     "tags": []
@@ -543,25 +571,25 @@
        "{'name': 'Austria', 'direction': 'E'}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neig.attrib"
+    "neigs[0].attrib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 124,
    "id": "44637f4c",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "xml_string = '''\n",
+    "xmlstring = \"\"\"<?xml version=\"1.0\"?>\n",
     "<root>\n",
     "  <node1>\n",
     "    <nodename>Matched Value 1</nodename>\n",
@@ -569,25 +597,24 @@
     "  <node2>\n",
     "    <nodename>Matched Value 2</nodename>\n",
     "  </node2>\n",
-    "</root>\n",
-    "'''"
+    "</root>\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 125,
    "id": "c1a6b8a1",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "root = ET.fromstring(xml_string)"
+    "root = etree.fromstring(xmlstring)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 127,
    "id": "b7d1d453",
    "metadata": {
     "tags": []
@@ -596,22 +623,88 @@
     {
      "data": {
       "text/plain": [
-       "[<Element 'nodename' at 0x104b481d0>, <Element 'nodename' at 0x104b48270>]"
+       "[<Element nodename at 0x104ad5280>, <Element nodename at 0x10579b8c0>]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "root.findall('.//nodename')"
+    "root.xpath('//nodename')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b29bf35f-0007-4ab9-80d6-05b0766d218c",
+   "metadata": {},
+   "source": [
+    "### More complex example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "2773708d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "xmlstring = \"\"\"<?xml version=\"1.0\"?>\n",
+    "<bookstore>\n",
+    "    <book>\n",
+    "        <title lang=\"en\">Introduction to XPath</title>\n",
+    "        <author>John Doe</author>\n",
+    "        <price>29.99</price>\n",
+    "    </book>\n",
+    "    <book>\n",
+    "        <title lang=\"fr\">XPath et XML</title>\n",
+    "        <author>Marie Dupont</author>\n",
+    "        <price>34.95</price>\n",
+    "    </book>\n",
+    "    <book>\n",
+    "        <title lang=\"en\">XML Programming</title>\n",
+    "        <author>David Smith</author>\n",
+    "        <price>19.99</price>\n",
+    "    </book>\n",
+    "</bookstore>\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "47204a66-2d78-4a2e-934c-0c5566b18fe2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Doe\n",
+      "David Smith\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Parse the XML string\n",
+    "root = etree.fromstring(xmlstring)\n",
+    "\n",
+    "# Find authors who write books in English\n",
+    "authors = root.xpath(\".//book[title/@lang='en']/author\")\n",
+    "\n",
+    "# Print the authors\n",
+    "for author in authors:\n",
+    "    print(author.text)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2773708d",
+   "id": "3e5b994c-b384-4b28-b9e5-484b36364fc7",
    "metadata": {},
    "outputs": [],
    "source": []
