fixing xpath examples

--- a/notebooks/lecture_4_xml_xpath.ipynb
+++ b/notebooks/lecture_4_xml_xpath.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "id": "b1dcab0a",
    "metadata": {
     "tags": []
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 2,
    "id": "221fca4b",
    "metadata": {
     "tags": []
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "id": "7a28f7aa",
    "metadata": {
     "tags": []
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 4,
    "id": "e7a12a3a",
    "metadata": {
     "tags": []
@@ -82,7 +82,7 @@
        "('data', {})"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "id": "7baf29d7",
    "metadata": {
     "tags": []
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 6,
    "id": "e38a81e9",
    "metadata": {
     "tags": []
@@ -128,7 +128,7 @@
        "{'name': 'Singapore'}"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 7,
    "id": "06fe3d40",
    "metadata": {
     "tags": []
@@ -152,7 +152,7 @@
        "('rank', '4')"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 8,
    "id": "74f7a425",
    "metadata": {
     "tags": []
@@ -172,10 +172,10 @@
     {
      "data": {
       "text/plain": [
-       "<Element country at 0x1057a1b40>"
+       "<Element country at 0x110266f00>"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 9,
    "id": "73b45810",
    "metadata": {
     "tags": []
@@ -196,12 +196,12 @@
     {
      "data": {
       "text/plain": [
-       "[<Element country at 0x1057a1b40>,\n",
-       " <Element country at 0x104aed140>,\n",
-       " <Element country at 0x1058777c0>]"
+       "[<Element country at 0x110266f00>,\n",
+       " <Element country at 0x110227b80>,\n",
+       " <Element country at 0x11027b440>]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 10,
    "id": "a6719ada-bf25-40b6-9666-d6e5d45502df",
    "metadata": {
     "tags": []
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "id": "56be44b3",
    "metadata": {
     "tags": []
@@ -252,10 +252,10 @@
     {
      "data": {
       "text/plain": [
-       "[<Element data at 0x105877bc0>]"
+       "[<Element data at 0x1102668c0>]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "id": "0bb62f46-21cb-436d-9299-3fddf07b3c68",
    "metadata": {
     "tags": []
@@ -277,10 +277,10 @@
     {
      "data": {
       "text/plain": [
-       "[<Element data at 0x105877bc0>]"
+       "[<Element data at 0x1102668c0>]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "id": "eed02b8d",
    "metadata": {
     "tags": []
@@ -308,14 +308,14 @@
     {
      "data": {
       "text/plain": [
-       "[<Element neighbor at 0x1057cc700>,\n",
-       " <Element neighbor at 0x105870300>,\n",
-       " <Element neighbor at 0x105870440>,\n",
-       " <Element neighbor at 0x105870880>,\n",
-       " <Element neighbor at 0x105870800>]"
+       "[<Element neighbor at 0x106c8ee00>,\n",
+       " <Element neighbor at 0x1102669c0>,\n",
+       " <Element neighbor at 0x11023b740>,\n",
+       " <Element neighbor at 0x11027bf80>,\n",
+       " <Element neighbor at 0x110225080>]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "id": "90177c8a",
    "metadata": {
     "tags": []
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "id": "08b53962",
    "metadata": {
     "tags": []
@@ -406,25 +406,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 16,
    "id": "fa28db71",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2008\n",
-      "2011\n",
-      "2011\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['2008', '2011', '2011']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for el in root.xpath(\".//year\"):\n",
-    "    print(el.text)"
+    "root.xpath(\".//year/text()\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "262657c3-8674-484b-bcc5-facb9316215b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2008', '2011', '2011']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# printing text\n",
+    "root.xpath(\".//year/text()\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4afd2af5-31a0-44f7-9673-7754a1bd5f63",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Austria', 'Switzerland', 'Malaysia', 'Costa Rica', 'Colombia']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# printing atribute values\n",
+    "root.xpath(\"//neighbor/@name\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f7038ba4-aa75-4e2d-8beb-f44a0c7ae7a5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Exercise: print country names"
    ]
   },
   {
@@ -437,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 22,
    "id": "954eb18f",
    "metadata": {
     "tags": []
@@ -460,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 23,
    "id": "c7d85ef8",
    "metadata": {
     "tags": []
@@ -472,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 24,
    "id": "2decc20f",
    "metadata": {
     "tags": []
@@ -494,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 25,
    "id": "f6e50605",
    "metadata": {
     "tags": []
@@ -516,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 26,
    "id": "54ed901b",
    "metadata": {
     "tags": []
@@ -539,28 +599,60 @@
   },
   {
    "cell_type": "markdown",
-   "id": "697fd511",
+   "id": "1833cc02-b202-4a95-a540-9276ca8638d3",
    "metadata": {},
    "source": [
-    "## using @"
+    "## filtering "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "daefe60c",
+   "execution_count": 43,
+   "id": "a4d0d522-c65f-4d03-87cd-30949bb34e83",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "neigs = root.xpath(\".//neighbor[@name='Austria']\")"
+    "xmlstring = \"\"\"<?xml version=\"1.0\"?>\n",
+    "<moviestore>\n",
+    "    <movie lang=\"en\">\n",
+    "        <title>Inception</title>\n",
+    "        <director>Christopher Nolan</director>\n",
+    "        <genre>Science Fiction</genre>\n",
+    "        <year>2010</year>\n",
+    "    </movie>\n",
+    "    <movie lang=\"fr\">\n",
+    "        <title>Le Fabuleux Destin d'Amélie Poulain</title>\n",
+    "        <director>Jean-Pierre Jeunet</director>\n",
+    "        <genre>Romantic Comedy</genre>\n",
+    "        <year>2001</year>\n",
+    "    </movie>\n",
+    "    <movie lang=\"en\">\n",
+    "        <title>The Dark Knight</title>\n",
+    "        <director>Christopher Nolan</director>\n",
+    "        <genre>Action</genre>\n",
+    "        <year>2008</year>\n",
+    "    </movie>\n",
+    "</moviestore>\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "ac319558",
+   "execution_count": 44,
+   "id": "f8e326a5-b57b-4862-942a-3d39c5b2c8ec",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "root = etree.fromstring(xmlstring)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "54b5cb6c-d032-445f-8f16-1563f56799c9",
    "metadata": {
     "tags": []
    },
@@ -568,21 +660,100 @@
     {
      "data": {
       "text/plain": [
-       "{'name': 'Austria', 'direction': 'E'}"
+       "[<Element movie at 0x106feac00>, <Element movie at 0x106fdec00>]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neigs[0].attrib"
+    "# elments with movies with director \"Christopher Nolan\"\n",
+    "root.xpath('./movie[director=\"Christopher Nolan\"]')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 46,
+   "id": "43acd25a-8ddf-4515-89e1-f5adbb71529e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Inception', 'The Dark Knight']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# now let's print the title\n",
+    "root.xpath('./movie[director=\"Christopher Nolan\"]/title/text()')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "697fd511",
+   "metadata": {},
+   "source": [
+    "## filtering atributes with @"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "daefe60c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Element movie at 0x106feac00>, <Element movie at 0x106fdec00>]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# movies with titles in english\n",
+    "root.xpath('./movie[@lang=\"en\"]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "ac319558",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# exercise print the name of the movies in english"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6027c1d-2a0b-4c24-a07d-1574be4a6845",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## match a tag anywhere"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "id": "44637f4c",
    "metadata": {
     "tags": []
@@ -602,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 31,
    "id": "c1a6b8a1",
    "metadata": {
     "tags": []
@@ -614,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 32,
    "id": "b7d1d453",
    "metadata": {
     "tags": []
@@ -623,10 +794,10 @@
     {
      "data": {
       "text/plain": [
-       "[<Element nodename at 0x104ad5280>, <Element nodename at 0x10579b8c0>]"
+       "[<Element nodename at 0x1102b1cc0>, <Element nodename at 0x1102b1c80>]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 33,
    "id": "2773708d",
    "metadata": {
     "tags": []
@@ -674,19 +845,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 34,
    "id": "47204a66-2d78-4a2e-934c-0c5566b18fe2",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "John Doe\n",
-      "David Smith\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['John Doe', 'David Smith']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -694,11 +867,7 @@
     "root = etree.fromstring(xmlstring)\n",
     "\n",
     "# Find authors who write books in English\n",
-    "authors = root.xpath(\".//book[title/@lang='en']/author\")\n",
-    "\n",
-    "# Print the authors\n",
-    "for author in authors:\n",
-    "    print(author.text)"
+    "root.xpath(\".//book[title/@lang='en']/author/text()\")"
    ]
   },
   {
