--- a/notebooks/lab_3.ipynb
+++ b/notebooks/lab_3.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "2f53d5cc-5544-40c5-a657-ca64955da867",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import xml.etree.ElementTree as ET"
+    "from lxml import etree"
    ]
   },
   {
@@ -26,12 +26,12 @@
    "id": "0d4c4dd1-92d6-4c2d-8688-ca8d0e7c9011",
    "metadata": {},
    "source": [
-    "1. Print all book titles in the XML."
+    "1. A list of book titles in the XML."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "cbc17695-158c-42a6-a962-c713875e0fd7",
    "metadata": {
     "tags": []
@@ -53,14 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "25198952-de63-45a0-9535-6966af28dd7f",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "root = ET.fromstring(xmlstring)"
+    "root = etree.fromstring(xmlstring)"
    ]
   },
   {
@@ -68,12 +68,12 @@
    "id": "aa1c4fef-bf80-4645-83cd-eb8f21d6c6b3",
    "metadata": {},
    "source": [
-    "2. Print all the names of students that are 20 years old."
+    "2. A list of the names of students that are 20 years old."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "140b180f-2b0e-46bc-be20-64810a86320d",
    "metadata": {
     "tags": []
@@ -90,53 +90,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "82e96265-35f6-477d-bbb9-d5b577bf8d35",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "root = ET.fromstring(xmlstring)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "899e26ad-c370-464c-b9ae-61a2151fc43a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "xmlstring = \"\"\"<?xml version=\"1.0\"?>\n",
-    "<students>\n",
-    "  <student id=\"1\" name=\"Alice\" year=\"2000\" />\n",
-    "  <student id=\"2\" name=\"Bob\" year=\"2001\" />\n",
-    "  <student id=\"3\" name=\"Charlie\" year=\"2000\" />\n",
-    "  <student id=\"4\" name=\"Alex\" year=\"2004\" />\n",
-    "</students>\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "98ef2844-2543-45d7-8c52-a87ba7bae494",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "root = ET.fromstring(xmlstring)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "79f32642-0bc6-4da6-a33c-b57c312ff4d1",
    "metadata": {},
    "source": [
-    "3. Print the books titles of books with the folloing cahracteristics: <br>\n",
+    "3. List the books titles of books with the folloing cahracteristics: <br>\n",
     "(a) With price 19.95 <br>\n",
     "(b) With price < 20$ <br>\n",
     "(c) Author's first name is Jane <br>"
@@ -144,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "7f1349cf-c38f-48b7-b421-3da46d05a71f",
    "metadata": {
     "tags": []
@@ -177,28 +135,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "54122eb7-a302-4c34-86e7-aacdf8fcce2f",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "root = ET.fromstring(xmlstring)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e05e355f-0bf3-453d-b8fe-49fb29e97118",
    "metadata": {},
    "source": [
-    "4. Print the name of the 3rd fruit in the list"
+    "4. Name of the 3rd fruit in the list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "a24c2d59-4d9a-44e8-b477-1ac88cd875b8",
    "metadata": {
     "tags": []
@@ -223,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "02f76dcf-65a1-4f9f-867c-569ea0a2e0c9",
    "metadata": {
     "tags": []
@@ -245,12 +191,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5418d70b-4b29-4112-919f-a8976b7dcc6e",
+   "cell_type": "markdown",
+   "id": "e59d833a-0c0b-4475-ac51-e27d82e84c04",
    "metadata": {},
+   "source": [
+    "6. (a) Find the movies in English. <br>\n",
+    "   (b) Find the directors of all books written in English. <br>\n",
+    "   (c) Find movies made after 2005 <br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c21e679a-a68c-42e0-a4d0-745a3084d3f7",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "xmlstring = \"\"\"<?xml version=\"1.0\"?>\n",
+    "<moviestore>\n",
+    "    <movie>\n",
+    "        <title lang=\"en\">Inception</title>\n",
+    "        <director>Christopher Nolan</director>\n",
+    "        <genre>Science Fiction</genre>\n",
+    "        <year>2010</year>\n",
+    "    </movie>\n",
+    "    <movie>\n",
+    "        <title lang=\"fr\">Le Fabuleux Destin d'Amélie Poulain</title>\n",
+    "        <director>Jean-Pierre Jeunet</director>\n",
+    "        <genre>Romantic Comedy</genre>\n",
+    "        <year>2001</year>\n",
+    "    </movie>\n",
+    "    <movie>\n",
+    "        <title lang=\"en\">The Dark Knight</title>\n",
+    "        <director>Christopher Nolan</director>\n",
+    "        <genre>Action</genre>\n",
+    "        <year>2008</year>\n",
+    "    </movie>\n",
+    "</moviestore>\"\"\""
+   ]
   }
  ],
  "metadata": {
